modified config for hostnames and cluster name

--- a/_config.yml
+++ b/_config.yml
@@ -75,10 +75,10 @@ start_time: 0
 # this is the scheduler to be used for the workshop
 # possible values: slurm (planned lsf & pbs)
 scheduler: "slurm"
-login_host: "clark.rnet.missouri.edu"
-hostname: "tc-m610-login-node623"
-cluster_name: "clark.rnet.missouri.edu"
-shared_fast_filesystem: "/fastfs"
+login_host: "crane.unl.edu"
+hostname: "login.crane.hcc.unl.edu"
+cluster_name: "crane.unl.edu"
+shared_fast_filesystem: "/work"
 
 
 # Specify that things in the episodes collection should be output.
